Mail: Fix address labels in preview were hidden by avatar

--- a/mail/templates/default/app.css
+++ b/mail/templates/default/app.css
@@ -1063,7 +1063,7 @@ div#mail-index_nm.splitter-pane {min-height: 100px;}
 
 .previewWrapper .firstColumnTitle {
 	max-width: 7em;
-	text-align: end;
+	justify-content: flex-end;
 	min-width: 7em;
 	color: darkgrey;
 }
